Don't delete the database on reprovision.

--- a/cookbooks/vagrant/templates/default/development.ini
+++ b/cookbooks/vagrant/templates/default/development.ini
@@ -81,7 +81,7 @@ solr_url = http://localhost:8983/solr
 #       Add ``pdf_preview`` to enable the resource preview for PDFs
 #		Add ``resource_proxy`` to enable resorce proxying and get around the
 #		same origin policy
-ckan.plugins = stats text_preview pdf_preview recline_preview multilingual_dataset multilingual_group multilingual_tag synchronous_search harvest ckan_harvester
+ckan.plugins = stats text_preview pdf_preview recline_preview multilingual_dataset multilingual_group multilingual_tag synchronous_search harvest ckan_harvester ord_hierarchy
 
 
 ## Front-End Settings
